--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Node
 node_modules
 dist
 dist-ssr
@@ -24,4 +25,3 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
-src/assets/img/hana.png
